<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ui.core.AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/green"
        android:id="@+id/toolbar"
        android:visibility="visible"
        android:paddingVertical="15dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/iv_back"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back"
            android:background="@drawable/solid_white_corner_5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/green"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kerjamudah."
        android:id="@+id/tv_logo"
        android:textColor="@color/white"
        style="@style/Font.Regular.14"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="15dp"
        android:background="@drawable/solid_white_corner_5"
        app:layout_constraintTop_toBottomOf="@id/tv_logo"
        android:layout_marginHorizontal="40dp"
        android:paddingVertical="25dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="35dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tentang kerjamudah."
            style="@style/Font.Regular.16"
            android:gravity="center"
            android:textColor="@color/pastel_blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_text_10_word"
            android:layout_marginTop="20dp"
            style="@style/Font.Regular.14"
            android:textColor="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_text_30_word"
            android:layout_marginTop="20dp"
            style="@style/Font.Regular.14"
            android:textColor="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_text_5_word"
            android:layout_marginTop="20dp"
            style="@style/Font.Regular.14"
            android:textColor="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Untuk informasi lebih lanjut, kunjungi\nwww.kerjamudah.id"
            android:layout_marginTop="20dp"
            style="@style/Font.Regular.14"
            android:textColor="@color/grey"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/light_grey_opacity_40"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/il_internet"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="www.kerjamudah.id"
                style="@style/Font.SemiBold.12"
                android:textColor="@color/pastel_blue"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>