<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.freelancer.RegisterFreelancerSummaryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_collapseMode="pin">

                <com.app.kerja_mudah.custom_view.KerjaMudahIndicator
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:total_step="4"
                    app:current_step="4"/>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:overScrollMode="never">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cl_main">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/freelancer_category"
                            style="@style/Font.Bold.14"
                            android:textColor="@color/grey"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit"
                            android:id="@+id/tv_edit_category"
                            style="@style/Font.Bold.14"
                            android:textColor="@color/green"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Font.SemiBold.14"
                        android:id="@+id/tv_category"
                        android:textColor="@color/black"
                        android:text="Freelancer Categori"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/light_grey"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/detail_freelancer"
                            style="@style/Font.Bold.14"
                            android:textColor="@color/grey"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit"
                            android:id="@+id/tv_edit_detail"
                            style="@style/Font.Bold.14"
                            android:textColor="@color/green"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="10dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Nama:"
                            style="@style/Font.Regular.14"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dummy_text_5_word"
                            style="@style/Font.SemiBold.14"
                            android:id="@+id/tv_freelancer_name"
                            android:textColor="@color/black"/>
                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Deskripsi:"
                            style="@style/Font.Regular.14"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dummy_text_15_word"
                            style="@style/Font.SemiBold.14"
                            android:id="@+id/tv_freelancer_description"
                            android:textColor="@color/black"/>
                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Highlight Photo:"
                            style="@style/Font.Regular.14"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/rv_photo"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_image"/>
                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Highlight Video:"
                            style="@style/Font.Regular.14"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/rv_video"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_video"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/light_grey"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/document"
                            style="@style/Font.Bold.14"
                            android:textColor="@color/grey"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit"
                            android:id="@+id/tv_edit_document"
                            style="@style/Font.Bold.14"
                            android:textColor="@color/green"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="10dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="KTP:"
                            style="@style/Font.Regular.14"/>
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="200dp"
                            android:layout_marginTop="5dp"
                            android:layout_height="120dp"
                            android:id="@+id/iv_id_card"
                            app:shapeAppearanceOverlay="@style/ImageViewCorner10"/>
                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Selfie dengan KTP:"
                            style="@style/Font.Regular.14"/>
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="180dp"
                            android:layout_marginTop="5dp"
                            android:id="@+id/iv_selfie_id_card"
                            android:layout_height="200dp"
                            app:shapeAppearanceOverlay="@style/ImageViewCorner10"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/light_grey"
                        android:layout_marginBottom="70dp"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.app.kerja_mudah.custom_view.KerjaMudahButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_next"
        app:button_text="Lanjut"
        android:layout_gravity="bottom"
        app:apply_corner="false"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>