<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.core.ExampleCameraActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="15dp"
        android:background="@color/green"
        android:id="@+id/toolbar"
        android:visibility="visible"
        android:paddingVertical="15dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/iv_back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="5dp"
            app:tint="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/iv_back"
            android:text="Contoh"
            style="@style/Font.SemiBold.16"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/ll"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll_id_card"
            android:visibility="visible"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/solid_white_stroke_green_corner_7">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:shapeAppearanceOverlay="@style/ImageViewCorner5"
                        android:src="@drawable/example_photo_id_card_correct"
                        android:scaleType="centerCrop"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_check_circle"
                        android:layout_marginRight="3dp"
                        app:tint="@color/green"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Benar"
                        style="@style/Font.Regular.14"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/solid_white_stroke_green_corner_7">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:shapeAppearanceOverlay="@style/ImageViewCorner5"
                        android:src="@drawable/example_photo_id_card_wrong"
                        android:scaleX="2"
                        android:scaleY="2"
                        android:scaleType="centerCrop"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_close_circle"
                        android:layout_marginRight="3dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Salah"
                        style="@style/Font.Regular.14"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll_selfie_id_card"
            android:visibility="gone"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="210dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/solid_white_stroke_green_corner_7">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:shapeAppearanceOverlay="@style/ImageViewCorner5"
                        android:src="@drawable/example_selfie_id_card_correct"
                        android:scaleType="centerCrop"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_check_circle"
                        android:layout_marginRight="3dp"
                        app:tint="@color/green"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Benar"
                        style="@style/Font.Regular.14"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="210dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/solid_white_stroke_green_corner_7">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:shapeAppearanceOverlay="@style/ImageViewCorner5"
                        android:src="@drawable/example_selfie_id_card_wrong"
                        android:scaleType="centerCrop"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_close_circle"
                        android:layout_marginRight="3dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Salah"
                        style="@style/Font.Regular.14"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <com.app.kerja_mudah.custom_view.KerjaMudahBulletText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bullet_text="@string/dummy_text_15_word"
            android:layout_marginTop="5dp"/>
        <com.app.kerja_mudah.custom_view.KerjaMudahBulletText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bullet_text="@string/dummy_text_10_word"
            android:layout_marginTop="5dp"/>
        <com.app.kerja_mudah.custom_view.KerjaMudahBulletText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bullet_text="@string/dummy_text_5_word"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <com.app.kerja_mudah.custom_view.KerjaMudahButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:id="@+id/btn_next"
        app:button_text="Lanjut"/>
</androidx.constraintlayout.widget.ConstraintLayout>